# Audio-Transcriber

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/: prepare.sh  run.sh
src/: __main__.py  split_channels.py  utils.py
